--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,7 @@ html {
     font-weight: 500;
     font-size: 18px;
     margin-right: 10px;
+    text-decoration: none;
 }
 
 .section-first__header-navbar--left-image-main-chevron-down {
@@ -61,6 +62,7 @@ html {
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 18px;
+    cursor: pointer;
 }
 
 .section-first__header-navbar--right-button-second {
@@ -72,6 +74,7 @@ html {
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 18px;
+    cursor: pointer;
 }
 
 .section-first__header-navbar--right-button-second-image-arrow-right {
