--- a/css/index.css
+++ b/css/index.css
@@ -8,79 +8,164 @@
 
 html {
     --wh: #FFFFFF;
+    --bl: #212529;
     --ye: #FFE492;
     --bl1: #043873;
     --bl2: #4F9CF9;
     --bl3: #C4DEFD;
 }
 
-.h1 {
+.part {
+    display: flex;
+    justify-content: space-between;
+}
+
+.block {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.font1 {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 72px;
 }
 
-.h2 {
+.font2 {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 70px;
 }
 
-.h3 {
+.font3 {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 64px;
 }
 
-.p1 {
+.font4 {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 36px;
 }
 
-.p2 {
+.font5 {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 28px;
 }
 
-.p3 {
+.font6 {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 18px;
 }
 
-.p4 {
+.font7 {
     font-family: 'Inter', sans-serif;
     font-weight: 600;
     font-size: 24px;
 }
 
-.p5 {
+.font8 {
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 18px;
 }
 
-.p6 {
+.font9 {
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 16px;
 }
 
-.p7 {
+.font10 {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 18px;
 }
 
-.p8 {
+.font11 {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 16px;
 }
 
-#section-first {
+.color1 {
+    color: var(--wh);
+}
+
+.color2 {
+    color: var(--bl);
+}
+
+.margin1 {
+    margin-bottom: 24px;
+}
+
+.margin2 {
+    margin-bottom: 60px;
+}
+
+.button1 {
+    padding: 20px;
+    border-radius: 8px;
+    color: var(--wh);
+    background-color: var(--bl2);
+    border: none;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.button2 {
+    padding: 20px 40px 20px 40px;
+    border-radius: 6px;
+    color: var(--wh);
+    background-color: var(--bl2);
+    border: none;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.button3 {
+    padding: 20px 40px 20px 40px;
+    border-radius: 8px;
+    color: var(--wh);
+    background-color: var(--bl2);
+    border: none;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.button4 {
+    padding: 20px 40px 20px 40px;
+    border-radius: 10px;
+    color: var(--wh);
+    background-color: var(--bl2);
+    border: none;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.image {
+    padding-left: 10px;
+}
+
+.container {
+    background-color: var(--bl3);
+}
+
+.section-first {
     background-color: var(--bl1);
 }
 
@@ -154,51 +239,31 @@ html {
 
 .section-first__Get-More-Done-with-whitepace {
     background-image: url("/assets/images/section-first__Get-More-Done-with-whitepace--background-image.png");
-    background-size: 100%;
     background-repeat: no-repeat;
+    background-position: center;
     padding: 140px 220px 140px 220px;
-    display: flex;
-    justify-content: space-between;
-    background-color: yellow;
 }
 
 .section-first__Get-More-Done-with-whitepace--block {
-    /* margin: 68px 0px 68px 0px; */
     width: 656px;
-    /* height: 361px; */
-    background-color: red;
-}
-
-.section-first__Get-More-Done-with-whitepace--title {
-    color: var(--wh);
-    margin-bottom: 24px;
-}
-
-.section-first__Get-More-Done-with-whitepace--content {
-    color: var(--wh);
-    margin-bottom: 60px;
-}
-
-.section-first__Get-More-Done-with-whitepace--button {
-    padding: 20px;
-    border-radius: 8px;
-    color: var(--wh);
-    background-color: var(--bl2);
-    border: none;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-.section-first__Get-More-Done-with-whitepace--button-image {
-    padding-left: 10px;
 }
 
 .section-first__Get-More-Done-with-whitepace--container {
-    background-color: var(--bl3);
     width: 824px;
     height: 549px;
+}
+
+.section-second__Project-Management {
+    padding: 140px 220px 100px 220px;
+}
+
+.section-second__Project-Management--block {
+    width: 672px;
+}
+
+.section-second__Project-Management--container {
+    width: 748px;
+    height: 547px;
 }
 
 /* OK */
