--- a/css/index.css
+++ b/css/index.css
@@ -376,4 +376,25 @@ html {
     height: 479px;
 }
 
+
+
+
+
+
+
+
+
+.section-fifth__Your-work-everywhere-you-are {
+    padding: 140px 220px 140px 220px;
+}
+
+.section-fifth__Your-work-everywhere-you-are--block {
+    width: 1481px;
+}
+
+.section-fifth__Your-work-everywhere-you-are--highlight-image {
+    top: 62px;
+    left:  995px;
+}
+
 /* OK */
