--- a/css/index.css
+++ b/css/index.css
@@ -134,8 +134,20 @@ html {
     color: var(--black);
 }
 
+.color__yellow {
+    color: var(--yellow);
+}
+
 .margin__24 {
     margin-bottom: 24px;
+}
+
+.margin__25 {
+    margin-bottom: 25px;
+}
+
+.margin__28 {
+    margin-bottom: 28px;
 }
 
 .margin__60 {
@@ -375,9 +387,6 @@ html {
     width: 1481px;
     height: 479px;
 }
-
-
-
 
 
 
